swagger cliente complete
