# src/main/resources/static/swagger-apis/api1/swagger.yaml
@@ -37,10 +37,8 @@ paths:
       operationId: "saveClient"
       consumes:
         - "application/json"
-        - "application/xml"
       produces:
-        - "application/xml"
-        - "application/json"
+        - "*/*"
       parameters:
         - in: "body"
           name: "body"
@@ -49,8 +47,155 @@ paths:
           schema:
             $ref: "#/definitions/Cliente"
       responses:
-        405:
-          description: "Invalid input"
+        '200':
+          description: OK
+          schema:
+            type: object
+            additionalProperties:
+              type: object
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '405':
+          description: Invalid input
+      deprecated: false
+  /searchAll:
+    get:
+      tags:
+        - "cliente"
+      summary: "Buscar todos los clientes"
+      description: "Se encontrara todos los clientes registrados"
+      operationId: "getAllClient"
+      produces:
+        - "application/xml"
+        - "application/json"
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Cliente'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+      deprecated: false
+  /search/{id}:
+    get:
+      tags:
+        - "cliente"
+      summary: "Buscar un cliente por su ID"
+      description: "regresa un cliente"
+      operationId: "getClientById"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID del cliente a buscar"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/Cliente'
+        '400':
+          description: Invalid ID supplied
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Cliente not found
+      deprecated: false
+  /updateClient/{id}:
+    put:
+      tags:
+        - "cliente"
+      summary: "Actualizar cliente"
+      description: "Actualizar datos del cliente existente"
+      operationId: "updateClient"
+      consumes:
+        - "application/json"
+        - "application/xml"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID del cliente a actualizar"
+          required: true
+          type: "integer"
+          format: "int64"
+        - in: "body"
+          name: "body"
+          description: "Objeto del cliente para su actualización"
+          required: true
+          schema:
+            $ref: "#/definitions/Cliente"
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            additionalProperties:
+              type: object
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+      deprecated: false
+  /deleteClient/{id}:
+    delete:
+      tags:
+        - "cliente"
+      summary: "Eliminar un cliente sin lineas asociado"
+      description: ""
+      operationId: "deleteClient"
+      produces:
+        - "application/xml"
+        - "application/json"
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "ID del cliente a eliminar"
+          required: true
+          type: "integer"
+          format: "int64"
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: object
+            additionalProperties:
+              type: object
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+      deprecated: false
+#      security:
+#        - petstore_auth:
+#            - "write:pets"
+#            - "read:pets"
 #      security:
 #        - petstore_auth:
 #            - "write:pets"
@@ -654,9 +799,9 @@ definitions:
       - "name"
       - "photoUrls"
     properties:
-#      id:
-#        type: "integer"
-#        format: "int64"
+      id:
+        type: "integer"
+        format: "int64"
       name:
         type: "string"
         example: ""
